fixed width for header on tablet & fixed icon for button in header

--- a/src/styles/blocks/icon.scss
+++ b/src/styles/blocks/icon.scss
@@ -27,20 +27,20 @@
     }
   }
 
-  // &--arrow {
-  //   background-image: url(../images/icon/icon-arrow.svg);
-  //   transition: all 0.3s ease-in;
+  &--arrow {
+    background-image: url(../images/icon/icon-arrow.svg);
+    transition: all 0.3s ease-in;
 
-  //   &-black {
-  //     border: 1px solid $square-color-orange;
-  //     background-image: url(../images/icon/icon-arrow-black.svg);
-  //     transition: transform 0.3s ease-in;
+    // &-black {
+    //   border: 1px solid $square-color-orange;
+    //   background-image: url(../images/icon/icon-arrow-black.svg);
+    //   transition: transform 0.3s ease-in;
 
-  //     &:hover {
-  //       transform: scale(1.2);
-  //     }
-  //   }
-  // }
+    //   &:hover {
+    //     transform: scale(1.2);
+    //   }
+    // }
+  }
 
   &--dots {
     height: 9px;
