--- a/src/styles/blocks/page.scss
+++ b/src/styles/blocks/page.scss
@@ -4,6 +4,10 @@
 
   &__body {
     margin: 0;
+
+    @media (min-width: 600px) and (max-width: 780px) {
+      width: 100vh;
+    }
     // @include onTablet {
     //   @include grid;
     // }
